# pytorch-template

./: .gitignore  README.md  pyproject.toml
config/: default_config.yaml
config/callbacks/: default_callbacks.yaml
config/data/: default_data.yaml
config/logger/: default_loggers.yaml
config/model/: default_model.yaml
config/trainer/: default_trainer.yaml
pytorch_template/: dataset.py  model.py
scripts/: test.py  train.py
